--- a/.github/workflows/publish_extension.yml
+++ b/.github/workflows/publish_extension.yml
@@ -24,4 +24,4 @@ jobs:
       run: npx vsce package
 
     - name: Publish Extension
-      run: npx vsce publish -p ${{ secrets.VSCE_PAT_SECRET }}
+      run: npx vsce publish -p ${{ secrets.VSCE_PAT }}
