--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "intl-snippets",
   "displayName": "intl_autoComplete",
   "description": "react-intl snippet ",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "publisher": "charonyuu",
   "icon": "images/icon.png",
   "engines": {
@@ -66,16 +66,8 @@
       }
     ]
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm version patch && git add package.json"
-    }
-  },
   "scripts": {
     "build": "vsce package"
   },
-  "license": "MIT",
-  "devDependencies": {
-    "husky": "^9.0.11"
-  }
+  "license": "MIT"
 }
