fix: error because of changing name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-intl-auto-complete",
+  "name": "intl-snippets",
   "displayName": "intl_autoComplete",
   "description": "react-intl snippet and extension for auto complete",
   "version": "1.0.11",
